# marten-runtime

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  README_CN.md  STATUS.md  compose.yaml  init.sh  mcps.example.json  pyproject.toml  requirements.txt
config/: agents.toml  bindings.toml  channels.example.toml  mcp.example.toml  models.example.toml  platform.example.toml  providers.example.toml
docs/: 2026-03-29-private-agent-harness-design.md  2026-03-30-conversation-lanes-provider-resilience-design.md  2026-03-30-self-improve-design.md  2026-03-31-automation-domain-adapter-design.md  2026-03-31-progressive-disclosure-llm-first-capability-design.md  2026-04-01-feishu-generic-card-protocol-design.md  2026-04-09-next-branch-evolution-design.md  2026-04-09-next-branch-evolution-execution-plan.md  2026-04-09-next-branch-evolution-stage-2-execution-plan.md  2026-04-17-langfuse-observability-design.md  2026-04-19-session-catalog-and-thin-memory-design.md  2026-04-19-session-continuity-catalog-memory-implementation-plan.md  2026-04-20-thin-multi-provider-openai-compat-design.md  2026-04-20-thin-multi-provider-openai-compat-implementation-plan.md  2026-04-21-session-switch-compaction-and-replay-policy-design.md  2026-04-21-session-switch-compaction-and-replay-policy-implementation-plan.md  2026-04-22-generic-loop-finalization-contract-design.md  2026-04-22-generic-loop-finalization-contract-implementation-plan.md  2026-04-24-current-turn-evidence-ledger-finalization-design.md  2026-04-24-terminal-output-normalization-implementation-plan.md  (+12 more)
(+400 files in other folders)
