[project]
name = "marten-runtime"
version = "0.1.0"
description = "Simplified private-agent runtime for channel, binding, LLM, MCP, and skills."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  {name = "litiezhu"},
]
dependencies = [
  "fastapi",
  "httpx",
  "lark-oapi",
  "mcp",
  "python-socks",
  "python-dotenv",
  "uvicorn",
  "langfuse",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
